--- a/turismo/index.html
+++ b/turismo/index.html
@@ -13,7 +13,7 @@
 </td></tr></TABLE>
 <p><a href="/turismo/index.html">Turismo</a></p>
 <p><a href="/turismo/aguarda.html">A guarda</a></p>
-<p><a href="/turismo/Orosal.html">O Rosal</a></p>
-<p><a href="/turismo/Oia.html">Oia</a></p>
+<p><a href="/turismo/orosal.html">O Rosal</a></p>
+<p><a href="/turismo/oia.html">Oia</a></p>
 </body>
 </html>
