--- a/turismo/index.html
+++ b/turismo/index.html
@@ -11,7 +11,7 @@
 <p> Aqui están mis cosas&#128526;</p>
 
 </td></tr></TABLE>
-<p><a href="/turismo/index.html">Turismo</a></p>
+<p><a href="/turismo/index.html">Portada</a></p>
 <p><a href="/turismo/aguarda.html">A guarda</a></p>
 <p><a href="/turismo/orosal.html">O Rosal</a></p>
 <p><a href="/turismo/oia.html">Oia</a></p>
