--- a/turismo/index.html
+++ b/turismo/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<h2>Esta es mi portada </h2>
+	<h2>ESTA ES MI PORTADA </h2>
 <p> Aqui están mis cosas&#128526;</p>
 
 </td></tr></TABLE>
