--- a/turismo/index.html
+++ b/turismo/index.html
@@ -14,6 +14,6 @@
 <p><a href="/turismo/index.html">Portada</a></p>
 <p><a href="/turismo/aguarda.html">A guarda</a></p>
 <p><a href="/turismo/orosal.html">O Rosal</a></p>
-<p><a href="/turismo/oia.html">Oia</a></p>
+<p><a href="https://mlopezriveiro.github.io/turismo/oia.html">Oia</a></p>
 </body>
 </html>
