--- a/turismo/orosal.html
+++ b/turismo/orosal.html
@@ -15,10 +15,10 @@
 <li> yonkis </li>
 <li> vagabundos </li>
 <li> gatos abandonados </li>
-<img src="imagenes/marzan.jpeg"/>
+<img src="https://www.inmoserver.com/fotos/0355/wm/o_1c1lgldeufl71c971ofc1khs1o2110.jpg"/>
 <p>
 <a href="https://irocho.wordpress.com">visita irochiño </a> </p>
-<a href="aguarda.html"><img src="imagenes/marzan.jpeg"/> </a>
+<a href="aguarda.html">
 </body>
 
 
