--- a/turismo/orosal.html
+++ b/turismo/orosal.html
@@ -15,7 +15,7 @@
 <li> yonkis </li>
 <li> vagabundos </li>
 <li> gatos abandonados </li>
-<img src="https://www.inmoserver.com/fotos/0355/wm/o_1c1lgldeufl71c971ofc1khs1o2110.jpg"/>
+<img src="https://www.inmoserver.com/fotos/0355/wm/o_1c1lgldeufl71c971ofc1khs1o2110.jpg" width="500" height="333"/>
 <p>
 <a href="https://irocho.wordpress.com">visita irochiño </a> </p>
 <a href="aguarda.html">
