--- a/turismo/oia.html
+++ b/turismo/oia.html
@@ -7,7 +7,7 @@ oia
 <body>
 <strong> oia </strong>
 <p>
-<img src="imagenes/oia.jpg"/>  </p>
+<img src="https://upload.wikimedia.org/wikipedia/commons/1/16/Escudo_Oia.svg"/>  </p>
 El bello municipio de Oia se encuentra situado en la vertiente suroeste de la Comunidad Autónoma de Galicia, concretamente en la zona meridional de la provincia de Pontevedra, formando parte de la comarca de Bajo Miño. El término de Oia encuentra su frontera natural con el océano Atlántico al Oeste y está cerca de los pueblos septentrionales de Portugal. Se halla a una distancia de unos 200 kilómetros hasta la ciudad de A Coruña, a 126 kilómetros a Santiago de Compostela y a 70 kilómetros hasta Pontevedra. El territorio que ocupa Oia dispone de unos 83 kilómetros cuadrados aproximadamente, albergando una población estimada en alrededor de 2.950 habitantes. A través de la autovía A-9 ó la carretera N-550 podemos alcanzar la carretera C-550 que nos lleva hasta el municipio de Oia.
 <hr> </hr>
 
