--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
 <p><a href="/turismo/orosal.html">O Rosal</a></p>
 <p><a href="/turismo/oia.html">Oia</a></p>
 <p><a href="/formulario benvida/untitled.html">Formulario</a></p>
+<p><a href="/clases/clases.html">Clases</a></p>
 </body>
 </html>
