--- a/turismo/index.html
+++ b/turismo/index.html
@@ -3,7 +3,7 @@
 <head>
 	<link  rel=stylesheet  href=index.css>	
 <meta charset=utf-8> 
-<title>Turismo</title>
+<title>VIAJANDO</title>
 </head>
 
 <body>
