--- a/turismo/index.html
+++ b/turismo/index.html
@@ -3,11 +3,11 @@
 <head>
 	<link  rel=stylesheet  href=index.css>	
 <meta charset=utf-8> 
-<title>VIAJANDO</title>
+<title>turismo</title>
 </head>
 
 <body>
-	<h2>TURISMO </h2>
+	<h2>VIAJANDO </h2>
 <p> Aqui están mis cosas&#128535;</p>
 
 </td></tr></TABLE>
