--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
 <p><a href="/turismo/oia.html">Oia</a></p>
 <p><a href="/formulario benvida/untitled.html">Formulario</a></p>
 <p><a href="/clases/clases.html">Clases</a></p>
+<p><a href="/tarxetas-master/index.html">Semántica</a></p>
 </body>
 </html>
