--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
 <p><a href="/formulario benvida/untitled.html">Formulario</a></p>
 <p><a href="/clases/clases.html">Clases</a></p>
 <p><a href="/tarxetas-master/index.html">Semántica</a></p>
+<p><a href="/bootstrap-master/index.html">Recetas</a></p>
 </body>
 </html>
